--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+        .flex{
+            display: flex;
+            justify-content: center;
+        }
+        .top{
+            width: 600px;
+            height: 400px;
+            overflow: hidden;
+        }
+        .top img{
+           
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-    <h1>你好啊</h1>
-    <h2>保存的页面</h2>
     <h1>真是太帅啦</h1>
+    <h2>韦文涛太帅啦</h2>
+    <h1>真是太帅啦</h1>
+   <div class="flex">
+        <div class="top">
+            <img src="./image/2E36ADBFC07E6F37A77BB6F6D057D914.jpg" alt="">
+        </div>
+        <div class="top">
+            <img src="./image/49E620A287F65708B8C615F46B150932.jpg" alt="">
+        </div>
+   </div>
     
 </body>
 </html>
