--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h1>真是太帅啦</h1>
     <h2>韦文涛太帅啦</h2>
     <h1>真是太帅啦</h1>
+    <h1 style="color: rgb(229, 64, 9);">好爱好爱</h1>
    <div class="flex">
         <div class="top">
             <img src="./image/2E36ADBFC07E6F37A77BB6F6D057D914.jpg" alt="">
